[tool.poetry]
name = "spyd3r"
version = "0.0.0"
description = "Python web3 framework to interact with various protcols in a simple asycnhronous way"
packages = [
    { include = "spyd3r" },
]
authors = ["Rico <rico@nemo.ventures>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
loguru = "^0.6.0"
web3 = { git = "git@github.com:ethereum/web3.py.git", rev = "14cb121" }
websockets = "^10.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.3"
mypy = "^0.971"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.venv
  | __pycache
)/
'''
